--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,18 @@
 h1 {
+  font-family: "coiny", sans-serif;
   font-size: 42px;
   text-transform: uppercase;
   text-align: center;
 }
 
-p {
+.fact {
   font-size: 20px;
   line-height: 1.4;
-  font-family: sans-serif;
+  font-family: "sono", sans-serif;
 }
 
-span {
+.tag {
+  font-family: "coiny", sans-serif;
   text-transform: uppercase;
   font-size: 14px;
 }
