--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+body {
+  color: #fafaf9;
+  background-color: #292524;
+  font-family: "sono", sans-serif;
+}
+
+.fact-form {
+  background-color: #44403c;
+}
+
 h1 {
   font-family: "coiny", sans-serif;
   font-size: 42px;
@@ -8,7 +18,7 @@ h1 {
 .fact {
   font-size: 20px;
   line-height: 1.4;
-  font-family: "sono", sans-serif;
+  background-color: #44403c;
 }
 
 .tag {
