--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,32 @@
+/* GLOBAL STYLES */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+/* BODY STYLES */
 body {
   color: #fafaf9;
   background-color: #292524;
   font-family: "sono", sans-serif;
 }
 
+.header {
+  margin-bottom: 40px;
+}
+
 .fact-form {
   background-color: #44403c;
+  margin-bottom: 40px;
 }
 
 h1 {
   font-family: "coiny", sans-serif;
   font-size: 42px;
   text-transform: uppercase;
-  text-align: center;
+  text-align: left;
 }
 
 .fact {
