--- a/css/style.css
+++ b/css/style.css
@@ -15,30 +15,39 @@ body {
 
 .header {
   margin-bottom: 40px;
+  background-color: red;
 }
 
 .fact-form {
   background-color: #44403c;
   margin-bottom: 40px;
+  text-align: center;
+  padding: 16px 40px;
+
 }
 
 h1 {
   font-family: "coiny", sans-serif;
   font-size: 42px;
   text-transform: uppercase;
-  text-align: left;
 }
 
 .fact {
   font-size: 20px;
   line-height: 1.4;
   background-color: #44403c;
+  margin-bottom: 16px;
+  padding: 16px 24px;
 }
 
 .tag {
   font-family: "coiny", sans-serif;
   text-transform: uppercase;
   font-size: 14px;
+  padding-top: 3px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 10px;
 }
 
 ul {
