--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,6 @@ body {
   display: flex;
   align-items: center;
   gap: 16px;
-
 }
 
 .fact-form {
@@ -33,7 +32,6 @@ body {
   margin-bottom: 40px;
   text-align: center;
   padding: 16px 40px;
-
 }
 
 h1 {
@@ -49,6 +47,10 @@ h1 {
   background-color: #44403c;
   margin-bottom: 16px;
   padding: 16px 24px;
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  letter-spacing: -1px;
 }
 
 .tag {
@@ -59,6 +61,10 @@ h1 {
   padding-left: 10px;
   padding-right: 10px;
   border-radius: 10px;
+}
+
+.vote-buttons {
+  margin-left: auto;
 }
 
 ul {
