--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ body {
   padding: 40px;
 }
 
+/***************/
+/* MAIN LAYOUT */
+/***************/
 .header {
   margin-bottom: 40px;
   display: flex;
@@ -21,17 +24,26 @@ body {
   justify-content: space-between;
 }
 
-.logo {
-  display: flex;
-  align-items: center;
-  gap: 16px;
-}
-
 .fact-form {
   background-color: #44403c;
   margin-bottom: 40px;
   text-align: center;
   padding: 16px 40px;
+}
+
+.main {
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  gap: 48px;
+}
+
+/************/
+/* ELEMENTS */
+/************/
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
 
 h1 {
