--- a/css/style.css
+++ b/css/style.css
@@ -95,14 +95,29 @@ ul {
 }
 
 .source:link,
-.source:visited  {
+.source:visited {
   color: #a8a29e;
   text-decoration: none;
   margin-left: 12px;
-  transition: 0.3s 
+  transition: 0.3s;
 }
 
 .source:hover,
 .source:active {
   color: #3b82f6;
+}
+
+.btn {
+  font-family: "Coiny", sans-serif;
+  line-height: 1;
+  text-transform: uppercase;
+  font-size: 17px;
+  border: none;
+  padding: 16px 0 13px;
+  background-image: linear-gradient(135deg, #3b82f6, #ef4444, #16a34a, #eab308 );
+  color: inherit;§
+}
+
+.btn-large {
+  font-size: 30px;
 }
