--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
 .container {
   max-width: 1500px;
   margin: 0 auto;
-} 
+}
 
 .header {
   margin-bottom: 40px;
@@ -29,19 +29,16 @@ body {
   justify-content: space-between;
 }
 
-.fact-form {
-  background-color: #44403c;
-  margin-bottom: 40px;
-  display: flex;
-  align-items: center;
-  gap: 16px;
-  padding: 16px 40px;
-}
-
 .main {
   display: grid;
   grid-template-columns: 250px 1fr;
   gap: 48px;
+}
+
+@media (max-width: 900px) {
+  .main {
+    grid-template-columns: 1fr;
+  }
 }
 
 /************/
@@ -76,7 +73,6 @@ h1 {
   gap: 24px;
   letter-spacing: -1px;
   border-radius: 10px;
-  
 }
 
 @media (max-width: 1200px) {
@@ -197,4 +193,29 @@ ul {
   font-size: 18px;
   font-weight: 600;
   margin-right: 18px;
+}
+
+.fact-form {
+  background-color: #44403c;
+  margin-bottom: 40px;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  padding: 16px 40px;
+}
+
+@media (max-width: 1000px) {
+  body {
+    padding: 32px 48px;
+  }
+
+  .fact-form {
+    flex-direction: column;
+    align-items: stretch;
+  }
+
+  .fact-form input,
+  .fact-form select {
+    width: auto;
+  }
 }
